knative-build/runtimes/javascript/tests/error/payload-ow-bad-init-code-missing.http
POST http://localhost:8080/init HTTP/1.1
content-type: application/json

{
  "value": {
    "name" : "bad-init-no-code-key-missing",
    "main" : "main",
    "binary": false
  }
}

###
